--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ h4{
 	color: #008270;
 }
 h5{
-	margin: 10px 0px 30px 0px;
+	margin: 10px 0px 0px 0px;
 	width: 480px;
 	height: 30px;
 	line-height: 30px;
@@ -42,6 +42,9 @@ h5{
 }
 h5 a{
 	color: #4690e6;
+}
+h6{
+	margin: 2px 0 40px 0;
 }
 #BoardArea {
 	display: flex;
@@ -86,7 +89,6 @@ h5 a{
 	background: #008270;
 	color: #fff;
 }
-
 #writer_btn button:hover,#bt_se button:hover,#bo_ser ul button:hover{
 	color: #9FAA2B;
 	background: #006572;
@@ -224,7 +226,11 @@ select, #fill_coll{
 	line-height: 25px;
 	border: none;
 	resize: none;
-	margin-left: 12px;
+	margin-left: 7px;
+}
+
+#Locker{
+	margin: 7px 0 0 10px;
 }
 
 /* 글 읽기 스타일 */
