메인 블록페이징2
내일 CSS만 손 보면 될 듯...

--- a/css/style.css
+++ b/css/style.css
@@ -269,3 +269,19 @@ h2{
 #bo_content{
 	margin: 0px 7px 0px 7px;
 }
+
+/* 페이징 CSS */
+#page_num {
+	font-size: 14px;
+	margin-left: 260px;
+	margin-top:30px; 
+}
+#page_num ul li {
+	float: left;
+	margin-left: 10px; 
+	text-align: center;
+}
+.FGboldRED {
+	font-weight: bold;
+	color:red;
+}
