메인 블록페이징3
flex로 정렬 맘에 듬... 근데 이전페이지로 만드니까 숫자 정렬이 한쪽으로 쏠리는게 마음에 안 듬... div를 새로 나누어 봐야겠다...

--- a/css/style.css
+++ b/css/style.css
@@ -273,13 +273,14 @@ h2{
 /* 페이징 CSS */
 #page_num {
 	font-size: 14px;
-	margin-left: 260px;
-	margin-top:30px; 
+	margin-top:30px;
+	display: flex;
+	justify-content: space-between;
+	width: 250px;
 }
-#page_num ul li {
-	float: left;
-	margin-left: 10px; 
+#page_num div {
 	text-align: center;
+	list-style-type: none;
 }
 .FGboldRED {
 	font-weight: bold;
