메인 블록페이징 4
내일은 블록을 5개씩 나누는 게 아니라
현 페이지 기점으로 앞뒤로 2개씩 페이지 보여주기 고민해봐야겠음.

--- a/css/style.css
+++ b/css/style.css
@@ -276,11 +276,16 @@ h2{
 	margin-top:30px;
 	display: flex;
 	justify-content: space-between;
-	width: 250px;
+	align-items: center;
+	width: 350px;
 }
-#page_num div {
+#page_F, #page_E {
 	text-align: center;
-	list-style-type: none;
+}
+#page_C {
+	width: 150px;
+	display: flex;
+	justify-content: space-between;
 }
 .FGboldRED {
 	font-weight: bold;
