--- a/css/style.css
+++ b/css/style.css
@@ -305,20 +305,41 @@ h2{
 	border-radius: 10px;
 }
 .dap_lo {
-	width:800px;
+	width:760px;
+	margin-left:20px;
 	font-size: 14px;
 	padding:10px 0 15px 0;
 	border-bottom: solid 1px gray;
 }
 .dap_to {
 	margin-top:5px;
+	font-size: 17px;
+	margin-left:7px;
 }
 .rep_me {
 	font-size:12px;
+	display: flex;
+	justify-content: flex-start;
 }
 .rep_me ul li {
 	float:left;
 	width: 30px;
+}
+.dat_edit_bt, .dat_delete_bt{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width:50px;
+	height:22px;
+	font-size:12px;
+	margin-top: 5px;
+	margin-right: 7px;
+
+	border-radius: 7px;
+	border: none;
+	font-weight: bold;
+	background: #33683b;
+	color: #fff;
 }
 .dat_delete {
 	display: none;
@@ -353,21 +374,17 @@ h2{
 	display: flex;
 	justify-content: center;
 }
-.dat_fm_inf textarea{
-	height: 30px;
-}
 .re_bt {
 	position: absolute;
 	width:100px;
 	height:56px;
-	font-size:16px;
+	font-size: 18.5px;
+	font-weight: bold;
 	margin-left: 10px;
 	margin-top: 5px;
 
 	border-radius: 10px;
 	border: none;
-	font-size: 18.5px;
-	font-weight: bold;
 	background: #008270;
 	color: #fff;
 }
